--- a/languages/sunflower-map-points-map-de_DE.po
+++ b/languages/sunflower-map-points-map-de_DE.po
@@ -2,16 +2,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/sunflower-map-"
-"points\n"
-"POT-Creation-Date: 2025-07-04T10:52:33+02:00\n"
-"PO-Revision-Date: 2025-07-04 13:41+0200\n"
+"points-map\n"
+"POT-Creation-Date: 2025-07-22T09:04:10+00:00\n"
+"PO-Revision-Date: 2025-07-22 11:15+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: de_DE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.6\n"
+"X-Generator: Poedit 3.4.2\n"
 "X-Domain: sunflower-map-points-map\n"
 
 #. Plugin Name of the plugin
@@ -23,24 +23,79 @@ msgstr ""
 #: sunflower-map-points.php
 msgid "Simple plugin allowing map points and suggestions."
 msgstr ""
+"Einfaches Plugin über das Hinweise auf einer Karte gegeben werden können."
 
 #. Author of the plugin
 #: sunflower-map-points.php
 msgid "Alexander Bigga"
 msgstr ""
 
-#: build/map/render.php:24 build/map/index.js:129 build/map/index.js:98
+#: build/map/index.js:90 build/map/map-frontend.js:108 build/map/index.js:53
+#: build/map/map-frontend.js:68
+msgid "Leaflet is not available"
+msgstr "Leaflet ist nicht verfügbar"
+
+#: build/map/index.js:136 build/map/map-frontend.js:160 build/map/index.js:109
+#: build/map/map-frontend.js:136
+msgid "Your are here!"
+msgstr "Du bist hier!"
+
+#: build/map/index.js:146 build/map/map-frontend.js:175 build/map/index.js:122
+#: build/map/map-frontend.js:154
+msgid "Your location couldn't be found."
+msgstr "Dein Standort konnte nicht ermittelt werden."
+
+#: build/map/index.js:219 build/map/index.js:195
+msgid "Map Settings"
+msgstr "Karteneinstellungen"
+
+#: build/map/index.js:222 build/map/index.js:201
+msgid ""
+"Click into the map and move to the right position. The position and zoom "
+"level will be used in the map settings."
+msgstr ""
+"Klick in die Karte und verschiebe sie an die gewünschte Position. Die "
+"Position und das Zoomlevel werden in den Einstellungen übernommen."
+
+#: build/map/index.js:224 build/map/index.js:207
+msgid "Latitude"
+msgstr "Breitengrad"
+
+#: build/map/index.js:230 build/map/index.js:217
+msgid "Longitude"
+msgstr "Längengrad"
+
+#: build/map/index.js:236 build/map/index.js:227
+msgid "Zoom"
+msgstr "Zoom"
+
+#: build/map/index.js:244 build/map/index.js:239
+msgid "Height"
+msgstr "Höhe"
+
+#: build/map/index.js:257 build/map/index.js:254
 msgid "Mail To"
 msgstr "Email Empfänger"
 
-#: build/map/index.js:130 build/map/index.js:102
+#: build/map/index.js:258
 msgid "Mail form to this address instead of default receiver."
-msgstr ""
-"Sende Formular an die angegebene Adresse statt dem Standard-Empfänger."
+msgstr "Sende Formular an die angegebene Adresse statt dem Standard-Empfänger."
 
-#: build/map/index.js:132 build/map/index.js:107
+#: build/map/index.js:260 build/map/index.js:263
 msgid "default receiver"
 msgstr "Standard Empfänger"
+
+#: build/map/map-frontend.js:211 build/map/map-frontend.js:197
+msgid "Bootstrap is not available"
+msgstr "Bootstrap ist nicht verfügbar"
+
+#: build/map/map-frontend.js:296 build/map/map-frontend.js:314
+msgid "An error occured!"
+msgstr "Ein Fehler ist aufgetreten!"
+
+#: build/map/map-frontend.js:301 build/map/map-frontend.js:324
+msgid "Error on transmitting the form data."
+msgstr "Fehler bei der Übertragung der Formulardaten."
 
 #: build/map/block.json
 msgctxt "block title"
